converted px to rem

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
           </p>
 
           <div class="instructors__message-pix1">
-            <img src="images/Group 3.png" alt="" class="first" />
+            <img src="images/Group 3.png" alt="image" class="first" />
           </div>
           <div class="instructors__message-pix2">
-            <img src="images/Group 3.png" alt="" class="first" />
+            <img src="images/Group 3.png" alt="image" class="first" />
           </div>
         </div>
       </section>
